@startuml modelo-datos
!define Table(name,desc) class name as "desc" << (T,#FFAAAA) >>
!define primary_key(x) <b>PK: x</b>
!define foreign_key(x) <color:red>FK: x</color>
!define unique(x) <color:green>UQ: x</color>

title Modelo de Datos - Voz Segura (PostgreSQL con Prisma)

skinparam class {
  BackgroundColor<<T>> LightYellow
  BorderColor Black
  ArrowColor Black
}

class Usuario {
  primary_key(id: UUID)
  unique(email: String)
  passwordHash: String
  rol: Enum(DENUNCIANTE|SUPERVISOR|ADMIN)
  nombre: String?
  apellido: String?
  telefono: String?
  estado: Enum(ACTIVO|INACTIVO|BLOQUEADO)
  intentosFallidos: Int
  bloqueadoHasta: DateTime?
  createdAt: DateTime
  updatedAt: DateTime
}

class Denuncia {
  primary_key(id: UUID)
  unique(codigoAnonimo: String)
  titulo: String
  descripcion: Text
  categoria: Enum
  estado: Enum
  prioridad: Enum(BAJA|MEDIA|ALTA|URGENTE)
  foreign_key(denuncianteId: UUID?)
  foreign_key(supervisorId: UUID?)
  ubicacionGeneral: String?
  derivadaA: String?
  fechaDerivacion: DateTime?
  createdAt: DateTime
  updatedAt: DateTime
}

class Evidencia {
  primary_key(id: UUID)
  foreign_key(denunciaId: UUID)
  nombreOriginal: String
  nombreCifrado: String
  tipo: String
  tamano: Int
  rutaCifrada: String
  createdAt: DateTime
}

class HistorialDenuncia {
  primary_key(id: UUID)
  foreign_key(denunciaId: UUID)
  estadoAnterior: Enum
  estadoNuevo: Enum
  comentario: Text?
  realizadoPor: String
  createdAt: DateTime
}

class MensajeChat {
  primary_key(id: UUID)
  foreign_key(usuarioId: UUID)
  mensaje: Text
  sala: String
  tipo: Enum(TEXTO|SISTEMA|NOTIFICACION)
  createdAt: DateTime
}

class AuditoriaLog {
  primary_key(id: UUID)
  foreign_key(usuarioId: UUID?)
  accion: String
  recurso: String?
  detalles: Text?
  ipAddress: String?
  userAgent: String?
  exitoso: Boolean
  createdAt: DateTime
}

class Configuracion {
  primary_key(id: UUID)
  unique(clave: String)
  valor: Text
  descripcion: String?
  createdAt: DateTime
  updatedAt: DateTime
}

' Relaciones
Usuario "1" -- "0..*" Denuncia : "crea (denunciante)"
Usuario "1" -- "0..*" Denuncia : "supervisa"
Usuario "1" -- "0..*" MensajeChat : "envía"
Usuario "1" -- "0..*" AuditoriaLog : "genera"

Denuncia "1" -- "0..*" Evidencia : "tiene"
Denuncia "1" -- "0..*" HistorialDenuncia : "registra cambios"

note right of Denuncia
  **Categorías:**
  - ACOSO_LABORAL
  - DISCRIMINACION
  - FALTA_DE_PAGO
  - ACOSO_SEXUAL
  - VIOLACION_DERECHOS
  - OTRO
  
  **Estados:**
  - PENDIENTE
  - EN_REVISION
  - APROBADA
  - DERIVADA
  - CERRADA
  - RECHAZADA
end note

note right of Usuario
  **Seguridad:**
  - passwordHash: bcrypt 12 rounds
  - intentosFallidos: max 5
  - bloqueadoHasta: bloqueo temporal
  
  **Roles:**
  - DENUNCIANTE: crea denuncias
  - SUPERVISOR: revisa denuncias
  - ADMIN: gestiona sistema
end note

note bottom of Evidencia
  **Almacenamiento seguro:**
  - nombreCifrado: nombre aleatorio
  - rutaCifrada: ruta en servidor
  - tipo: MIME type del archivo
  - Archivos cifrados en disco
end note

note bottom of MensajeChat
  **Chat en tiempo real:**
  - sala: identificador de sala
  - Tipos: TEXTO, SISTEMA, NOTIFICACION
  - WebSocket con Socket.IO
end note

note bottom of AuditoriaLog
  **Trazabilidad completa:**
  - Registra todos los eventos
  - Login exitoso/fallido
  - Creación/modificación denuncias
  - Cambios de estado
  - Índices en usuarioId, accion, createdAt
end note

@enduml
